--- a/ChromeExtension/manifest.json
+++ b/ChromeExtension/manifest.json
@@ -10,5 +10,11 @@
     "page_action":{
         "default_popup":"popup.html"
     },
+    "content_scripts":[{
+        "all_frames":false,
+        "js":["content_script.js"],
+        "matches":["https://www.mlb.com/live-stream-games"],
+        "run_at":"document_idle"
+    }],
     "manifest_version":2
 }
